# Linux-Developer-On-Beaglebone-Black

./: README.md  main.c  setup.csv
Beaglebone Black ESP32 and DHT11 Sensor/Linux-Developer-On-Beaglebone-Black-main/: CMakeLists.txt  lv_conf.h  main.c  setup.csv
CAN/: ESP32_C3_10k_DHT11_Sensor.ino  ESP32_CAN.ino  can.c
UART/: ESP32_UART.ino  uart.c
